2009-06-18  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#120368 Notification displayed top of touch screen unlocking view

	* src/home/hd-render-manager.c (hd_render_manager_set_visibilities):
	  Hide/show the front group together with blur_front when we sense
	  fullscreens or not.  This is to hide the notification previews
	  which sit in the front group.

2009-06-18  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_dump_debug_info):
	  Print information about HildonWindowStack:s.

2009-06-17  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	NB#119560 Hiding a window affects the visibility of
	other transient windows

	* src/mb/hd-comp-mgr.c: If we are leaving app mode, and there are
	modal blockers, don't go to the switcher.  Go to the desktop,
	instead.

2009-06-17  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/util/hd-util.c (hd_util_modal_blocker_realize): Add argument for
	saying that only ping is desired, not delete event.
	* src/mb/hd-note.c: Create modal blocker for confirmation notes, too,
	but do not delete them, just ping them to detect a jammed application.
	Fixes: NB#112165

2009-06-17  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#120157 - applets on the deactivated home are some times
	appearing on the present active home for a small instance of time.

	* src/home/hd-home-view.c (close_applet): Hide clutter actor when
	closing.

2009-06-17  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#122941 App window need information about state when it is visible
		  in task-switcher and not visible at all

	* src/home/hd-render-manager.c (hd_rener_manager_set_state):
	  Change _MB_WM_CURRENT_APP_WIN such that 0xFFFFFFFF indicates
	  we're in tasw.

2009-06-17  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Improved waking up hibernated apps, for NB#121512.

	* src/home/hd-switcher.c: If still loading, go to switcher or home when	the
	loading fail appears.
	* src/launcher/hd-app-mgr.c: