@@ -1,5 +1,10 @@
 2009-06-18  Adam Endrodi  <adam.endrodi@blumsoft.eu>
 
+	* src/util/hd-transition.c (on_notification_timeline_new_frame):
+	  Fly to the right of the tasks button rather than covering it.
+
+2009-06-18  Adam Endrodi  <adam.endrodi@blumsoft.eu>
+
 	NB#120368 Notification displayed top of touch screen unlocking view
 
 	* src/home/hd-render-manager.c (hd_render_manager_set_visibilities):
